<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200sp"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/daily_data_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:textColor="#a2a1b8"
        android:textSize="16sp"
        android:layout_marginStart="64sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="#a2a1b8"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/daily_data_temperature"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:maxLength="12"
            android:padding="16dp"
            android:text="@string/_23_23"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="#a2a1b8"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/daily_data_windspeed"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:maxLength="12"
            android:padding="16dp"
            android:text="@string/_3_8"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uv_index"
            android:textColor="#a2a1b8"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/daily_data_uvi"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:maxLength="12"
            android:padding="16dp"
            android:text="@string/_12_1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rainfall"
            android:textColor="#a2a1b8"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/daily_data_rainfall"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:maxLength="12"
            android:padding="16dp"
            android:text="@string/_0_51mm"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weather"
            android:textColor="#a2a1b8"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/daily_data_weather"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:maxLength="12"
            android:padding="16dp"
            android:text="Floods"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="#a2a1b8"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/daily_data_description"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:maxLength="12"
            android:padding="16dp"
            android:text="Floods"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop"
            android:textColor="#a2a1b8"
            android:maxLength="12"
            android:background="#0000"
            android:padding="16dp"/>
        <TextView
            android:id="@+id/daily_data_pop"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:maxLength="12"
            android:padding="16dp"
            android:text="@string/_0_2"
            />
    </LinearLayout>

    </LinearLayout>
