<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/alertItemBackground"
    app:cardCornerRadius="20sp"
    app:cardElevation="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="10sp">

    <LinearLayout
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_type"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginStart="10sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/alert_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textColor="#fff"
                android:layout_marginStart="10sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_limit"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginStart="10sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/upper_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upper_limit_item"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginStart="10sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_limit_item"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginStart="10sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/lower_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value_lower_limit_item"
                android:textColor="#fff"
                android:layout_marginStart="10sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="@string/notification_message"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginStart="10sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/user_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_marginStart="10sp"
                android:inputType="textMultiLine"
                android:enabled="false"
                android:textSize="15sp"
                android:singleLine="false"
                android:minLines="2"
                android:maxLines="9"
                android:padding="15sp"
                android:text="@string/user_message" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="250sp">

        <Button
            android:id="@+id/alert_Item_delete_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#fff"
            android:layout_marginTop="40sp"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>